# gym-platformer

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: run-tests.yml
gym_platformer/: __init__.py
gym_platformer/core/: block.py  config.py  map.py  player.py
gym_platformer/envs/: __init__.py  discrete_platformer_env.py  platformer_env.py
gym_platformer/utils/: __init__.py  scores.py
gymplatformer/: __init__.py  discrete_platformer_env.py  platformer_env.py
gymplatformer/core/: __init__.py  config.py  map.py  player.py
gymplatformer/envs/: __init__.py
gymplatformer/utils/: scores.py
src/gym_platformer/: __init__.py
src/gym_platformer/core/: block.py  chunks.py  config.py  map.py  player.py
src/gym_platformer/envs/: __init__.py  platformer_env.py
src/gym_platformer/utils/: __init__.py  scores.py
tests/: test_block.py  test_make.py  test_map.py  test_platformer_env.py  test_player.py  test_scores.py
